# YTDownloader

./: .coveragerc  .gitignore  .pylintrc  <MagicMock name='mock._resolve_db_file()' id='139793970460192'>  ANDROID_BUILD_SETUP.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CHANGELOG_ROBUSTNESS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  LICENSE  MOBILE_DEPLOYMENT.md  PROJECT_HEALTH.md  README.md  ROBUSTNESS_ANALYSIS.md  SECURITY.md  SETUP_MOBILE.md  SETUP_WINDOWS.md  SUGGESTIONS.md  SUPPORT.md  WHATS_NEXT.md  WIKI.md  app_controller.py  app_layout.py  app_state.py  batch_importer.py  clipboard_monitor.py  cloud_manager.py  components.py  config_manager.py  diagnose_startup.py  docker-compose.yml  download_scheduler.py  downloader.py  downloader_legacy.py  export.json  fix_tests.py  (+34 more)
.github/workflows/: build-desktop.yml  build-linux.yml  build-mobile-flet.yml  build-mobile.yml  build-windows.yml  build.yml  get-version.yml  release.yml  verify.yml
assets/: icon.icns
audit_reports/: AUDIT_ROADMAP.md  PHASE_1_FOUNDATION.md  PHASE_2_ARCHITECTURE.md  PHASE_3_FRONTEND.md  PHASE_4_QA.md  PHASE_5_DEVOPS.md  PHASE_6_DOCS.md  PHASE_7_RELEASE.md
build_logs/: check_win_python.bat  run_iscc.bat  win_build_installer.bat  win_build_installer_live.bat  win_check_nuitka.bat  win_install_nuitka.bat  win_install_requirements.bat
components/: __init__.py  download_item.py  empty_state.py
docs/: API.md
downloader/: __init__.py  constants.py  core.py  info.py  types.py
downloader/engines/: generic.py  ytdlp.py
downloader/extractors/: generic.py  telegram.py
downloader/utils/: __init__.py
installers/: setup.iss
locales/: en.json  es.json  fa.json
mobile/: README.md  buildozer.spec  main.py
project_docs/: Developer-Guide.md  Home.md  Installation.md  Troubleshooting.md  User-Guide.md
scripts/: build_installer.py  build_mobile.py
stubs/: flet.pyi  pypresence.pyi
stubs/pydrive2/: auth.pyi  drive.pyi
tests/: conftest.py  test_app_controller_coverage.py  test_audit_fixes.py  test_batch_importer_coverage.py  test_build_installer_script.py  test_build_mobile_script.py  test_cloud_manager.py  test_cloud_manager_new.py  test_components.py  test_config_and_tokens.py  test_config_manager.py  test_config_manager_unit.py  test_dashboard_health.py  test_downloader.py  test_downloader_coverage.py  test_downloader_extended.py  test_downloader_robustness.py  test_features.py  test_final_downloader_utils.py  test_final_history_view.py  test_final_tasks.py  test_generic_downloader.py  test_generic_downloader_coverage.py  test_generic_downloader_new.py  test_generic_engine_edge.py  test_gui.py  test_history_manager.py  test_history_manager_unit.py  test_history_view_coverage.py  test_info_timeout.py  test_input_validation.py  test_locale_coverage.py  test_localization_manager.py  test_logger_config.py  test_main.py  test_main_comprehensive.py  test_main_integration.py  test_main_interactions.py  test_main_logic.py  test_new_features.py  (+23 more)
tests/new_tests/: test_app_state_coverage.py  test_clipboard_monitor.py  test_clipboard_monitor_coverage.py  test_clipboard_monitor_coverage_v2.py  test_components_empty_state_coverage.py  test_config_manager_coverage.py  test_config_manager_coverage_extra.py  test_coverage_logger.py  test_coverage_main.py  test_coverage_rate_limiter.py  test_coverage_rss.py  test_coverage_scheduler.py  test_coverage_sync.py  test_coverage_telegram.py  test_coverage_ui_utils_more.py  test_coverage_utils_shared.py  test_coverage_views.py  test_coverage_views_extra.py  test_coverage_ytdlp.py  test_dashboard_logic.py  test_dashboard_view.py  test_download_item_coverage.py  test_download_item_extra.py  test_download_job.py  (+39 more)
views/: __init__.py  base_view.py  dashboard_view.py  download_view.py  history_view.py  queue_view.py  rss_view.py  settings_view.py
wiki/: API.md  Architecture.md  Concepts.md  Developer-Guide.md  Features.md  Home.md  Installation.md  Roadmap.md  Troubleshooting.md  User-Guide.md
(+11 files in other folders)
