[project]
name = "streamcatch"
version = "2.0.0"
description = "Modern, robust, and feature-rich media downloader with GUI"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "StreamCatch Team"}
]
keywords = ["youtube", "downloader", "video", "audio", "media", "yt-dlp", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/AmirrezaFarnamTaheri/YTDownloader"
Documentation = "https://github.com/AmirrezaFarnamTaheri/YTDownloader/wiki"
Repository = "https://github.com/AmirrezaFarnamTaheri/YTDownloader.git"
Issues = "https://github.com/AmirrezaFarnamTaheri/YTDownloader/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flet]
assets_dir = "assets"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["downloader", "views"]
skip = ["venv", "build", "dist", ".git"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.isort]
known-first-party = ["downloader", "views"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^views/",
    "^stubs/",
    "^assets/",
    "^build/",
    "^dist/",
    "^venv/",
    "^mobile/",
]
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    "build/*",
    "dist/*",
    "scripts/*",
    "stubs/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 60
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.pylint.main]
ignore = ["tests", "venv", "build", "dist"]
jobs = 0

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-locals = 20
